--- a/app/views/messages/index.html.erb
+++ b/app/views/messages/index.html.erb
@@ -1,4 +1,8 @@
 <div class="wrapper">
-  <%= render "side_bar" %>
-  <%= render "main_chat" %>
+  <div class="side-bar">
+  <%= render partial: "side_bar" %>
+  </div>
+ <div class="chat">
+  <%= render partial: "main_chat" %>
+ </div>
 </div>
