--- a/app/assets/stylesheets/messages.css
+++ b/app/assets/stylesheets/messages.css
@@ -17,12 +17,17 @@
   height: 100px;
   background-color: #253141;
   padding: 0 20px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+
 }
 
 .rooms {
   height: calc(100vh - 100px);
   background-color: #2f3e51;
   padding: 0 20px;
+  overflow: scroll;
 }
 
 .chat-header {
@@ -41,4 +46,25 @@
   height: 90px;
   background-color: #dddddd;
   padding: 20px 40px;
+}
+
+.header-name a {
+  color: #fafafa;
+  font-size: 16px;
+  text-decoration: none;
+}
+.chat-room a {
+  padding: 14px;
+  color: deepskyblue;
+  font-size: 10px;
+  text-decoration: none;
+  border: 1px solid lightblue;
+}
+.room {
+  padding: 20px 0 40px;
+}
+
+.room-name a {
+  color: white;
+  text-decoration: none;
 }
