--- a/app/assets/stylesheets/messages.css
+++ b/app/assets/stylesheets/messages.css
@@ -34,18 +34,37 @@
   height: 100px;
   background-color: #ffffff;
   padding: 0 40px;
+  display: flex;
+  justify-content: space-between; 
+}
+.header-title {
+  color: #333;
+  font-size: 24px;
+  margin-top: 36px;
+}
+.header-button {
+  margin-top: 40px;
+}
+
+.header-button a {
+  text-decoration: none;
+  padding: 20px;
+  color: darkred;
+  border: 1px solid darkred;
 }
 
 .messages {
   height: calc(100vh - 100px - 90px);
   background-color: #fafafa;
   padding: 46px 40px 0 ;
+  overflow: scroll;
 }
 
 .form {
   height: 90px;
   background-color: #dddddd;
   padding: 20px 40px;
+  display: flex;
 }
 
 .header-name a {
@@ -67,4 +86,66 @@
 .room-name a {
   color: white;
   text-decoration: none;
+}
+
+.message {
+  margin: 10px 0 0 0;
+}
+.upper-message {
+  display: flex;  
+}
+.message-user {
+  color: #434a54;
+  font-size: 16px;
+}
+
+.message-date {
+  margin-left: 10px;
+
+  color: #999;
+  font-size: 12px;
+}
+
+.lower-message {
+  margin-top: 10px;
+}
+.message-content {
+  color: #434a54;
+  font-size: 14px;
+  margin-bottom: 40px;
+}
+.form-input {
+  background-color: white;
+  width: 100%;
+  display: flex;
+}
+
+.form-message {
+  border: none;
+  height: 50px;
+  width: 100%;
+  padding-left: 10px;
+}
+.form-submit {
+  background-color: #38AEF0;
+  border: none;
+  color: white;
+  font-size: 16px;
+  height: 50px;
+  margin-left: 15px;
+  padding: 0 20px;
+}
+
+.hidden {
+  display: none;
+}
+
+.form-image {
+  font-size: 12px;
+  background-color: lightblue;
+  color: white;
+  padding: 12px;
+  width: 60px;
+  margin: 5px 10px;
+  text-align: center;
 }
